# P6

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yaml  python-test.yml
scripts/: convert_protocol.py  data_remnants.py  generate_data.py  identify.py  process_machine_data.py  test.py
src/: __init__.py  candataExtractor.py  candataTable.py  compareJ1939.py  database.py  extractor.py  extractor_seperate.py  graphplot.py  histogram.py  identifier.py  import_xls.py  mendeley.py  model.ipynb  model.py  patternRecognizer.py
src/data/: __init__.py  data.py  model.py  modelRandomForrest.py  parser.py  processing.py  test_rand.py
src/loader/: __init__.py  loxam.py  mendeley.py
src/protocol_identifier/: __init__.py  __main__.py  normalize.py  protocol.py
src/protocol_identifier/data/: __init__.py  csv_readers.py  extractor.py  pkl_reader.py  protocol.py  time_parser.py  utils.py
src/protocol_identifier/graph/: __init__.py  graph.py
src/protocol_identifier/model/: ModelNeuralNet.py  __init__.py  modelLogReg.py  modelRandomForrest.py  model_randomforest.py  model_svc.py
src/protocol_identifier/processing/: __init__.py  dataSplitter.py  data_checker.py  data_converter.py  data_splitter.py  norm_time.py  (+3 more)
test/: test_compare.py  test_data.py  test_graph.py  test_model_data_creater.py  test_parser.py  test_processing.py  test_protocol.py
test/helpers/: __init__.py  assertion.py  defines.py  helper_converter.py
test/verification_test/: test_data_checker.py  test_data_converter.py  test_data_splitter.py  test_pgn_picker.py
(+22 files in other folders)
